feat: support sandbox names and hostnames
